syntax = "proto3";

package v1;

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
import "google/protobuf/timestamp.proto";

// The invitation resource. This invites users into organization 
message Invitation {
  // A uuid that uniquely determines the invitation.
  string id = 1;
  // The id of the user that created this invitation.
  string created_by = 2;
  // The full name of the user that created this invitation.
  string created_by_name = 3;
  // The id of the organization the invitee is being invited to.
  string org_id = 4;
  // This is the name of the organization that this invitation has been created
  // for.
  string org_name = 5;
  // The id of the person that is being invited here. Note that this is not the
  // uuid of some user, because the person that is being invited might not have
  // an account (yet).
  string invitee_email = 6;
  // The moment this invitation was created.
  google.protobuf.Timestamp created_at = 7;
  // The status of the invitation, indicating what user action has been taken
  // with this invitation.
  InvitationStatus status = 8;
  // If this invitation has been accepted, this field is set to the moment of
  // acceptance.
  optional google.protobuf.Timestamp accepted_at = 9;
  // If this invitation has been declined, this field is set to the moment of
  // declination.
  optional google.protobuf.Timestamp declined_at = 10;
<<<<<<< HEAD
=======
import "google/protobuf/empty.proto";
=======
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
import "google/protobuf/timestamp.proto";

// The invitation resource. This invites users into organization 
message Invitation {
  // A uuid that uniquely determines the invitation.
  string id = 1;
<<<<<<< HEAD
  string created_by_id = 2;
  string created_for_org_id = 3;
  string invitee_email = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp accepted_at = 6;
  optional google.protobuf.Timestamp declined_at = 7;
  string created_by_user_name = 8;
  string created_for_org_name = 9;
>>>>>>> 05e4c55 (move protos into flat structure)
=======
  // The id of the user that created this invitation.
  string created_by = 2;
  // The full name of the user that created this invitation.
  string created_by_name = 3;
  // The id of the organization the invitee is being invited to.
  string org_id = 4;
  // This is the name of the organization that this invitation has been created
  // for.
  string org_name = 5;
  // The id of the person that is being invited here. Note that this is not the
  // uuid of some user, because the person that is being invited might not have
  // an account (yet).
  string invitee_email = 6;
  // The moment this invitation was created.
  google.protobuf.Timestamp created_at = 7;
  // The status of the invitation, indicating what user action has been taken
  // with this invitation.
  InvitationStatus status = 8;
  // If this invitation has been accepted, this field is set to the moment of
  // acceptance.
  optional google.protobuf.Timestamp accepted_at = 9;
  // If this invitation has been declined, this field is set to the moment of
  // declination.
  optional google.protobuf.Timestamp declined_at = 10;
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
}

// Manage invitations
service Invitations {
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
  // Invite a user into an organization.
  rpc Create(CreateInvitationRequest) returns (CreateInvitationResponse);
  // List pending invitations for given org.
  rpc ListPending(ListPendingInvitationRequest) returns (InvitationsResponse);
  // List received invitations for given user.
  rpc ListReceived(ListReceivedInvitationRequest) returns (InvitationsResponse);
  // Accept an invitation and become member of specified organization.
  rpc Accept(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  // Decline an invitation.
  rpc Decline(DeclineInvitationRequest) returns (DeclineInvitationResponse);
  // Revoke a pending invitation.
  rpc Revoke(RevokeInvitationRequest) returns (RevokeInvitationResponse);
}

// The status of an invitation.
enum InvitationStatus {
  INVITATION_STATUS_UNSPECIFIED = 0;
  // This invitation has not been used yet. The user may still accept or decline
  // it.
  INVITATION_STATUS_OPEN = 1;
  // This invitation has been accepted. The user is now a member of the
  // specified organization and this invitation is not useful anymore.
  INVITATION_STATUS_ACCEPTED = 2;
  // This invitation has been declined. This means that the user can no longer
  // use this invitation anymore to join the organization.
  INVITATION_STATUS_DECLINED = 3;
}

// Use this message to create a new invitation.
message CreateInvitationRequest {
  // The id of the person that is being invited here. Note that this is not the
  // uuid of some user, because the person that is being invited might not have
  // an account (yet).
  string invitee_email = 1;
  // The id of the organization that the user is being invited to.
  string org_id = 2;
<<<<<<< HEAD
=======
  // Create an invitation for an org the calling user is owner/admin of
=======
  // Invite a user into an organization.
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
  rpc Create(CreateInvitationRequest) returns (CreateInvitationResponse);
  // List pending invitations for given org.
  rpc ListPending(ListPendingInvitationRequest) returns (InvitationsResponse);
  // List received invitations for given user.
  rpc ListReceived(ListReceivedInvitationRequest) returns (InvitationsResponse);
  // Accept an invitation and become member of specified organization.
  rpc Accept(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  // Decline an invitation.
  rpc Decline(DeclineInvitationRequest) returns (DeclineInvitationResponse);
  // Revoke a pending invitation.
  rpc Revoke(RevokeInvitationRequest) returns (RevokeInvitationResponse);
}

// The status of an invitation.
enum InvitationStatus {
  INVITATION_STATUS_UNSPECIFIED = 0;
  // This invitation has not been used yet. The user may still accept or decline
  // it.
  INVITATION_STATUS_OPEN = 1;
  // This invitation has been accepted. The user is now a member of the
  // specified organization and this invitation is not useful anymore.
  INVITATION_STATUS_ACCEPTED = 2;
  // This invitation has been declined. This means that the user can no longer
  // use this invitation anymore to join the organization.
  INVITATION_STATUS_DECLINED = 3;
}

// Use this message to create a new invitation.
message CreateInvitationRequest {
  // The id of the person that is being invited here. Note that this is not the
  // uuid of some user, because the person that is being invited might not have
  // an account (yet).
  string invitee_email = 1;
<<<<<<< HEAD
  string created_for_org_id = 2;
>>>>>>> 05e4c55 (move protos into flat structure)
=======
  // The id of the organization that the user is being invited to.
  string org_id = 2;
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
}

message CreateInvitationResponse {
}

message ListPendingInvitationRequest {
  string org_id = 1;
}

message ListReceivedInvitationRequest {
  string user_id = 1;
}

message InvitationsResponse {
  repeated Invitation invitations = 1;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
message AcceptInvitationRequest {
  string invitation_id = 1;
}

message AcceptInvitationResponse {
}

message DeclineInvitationRequest {
  string invitation_id = 1;
}

message DeclineInvitationResponse {
}

message RevokeInvitationRequest {
  string invitation_id = 1;
}

message RevokeInvitationResponse {
<<<<<<< HEAD
<<<<<<< HEAD
=======
message InvitationRequest {
  Invitation invitation = 1;
>>>>>>> 05e4c55 (move protos into flat structure)
=======
>>>>>>> 00f3ec6 (simplify invitation requests (#85))
=======
>>>>>>> 208cdfd (Squashed 'proto/' changes from 2504f12..11f1cad)
}
